clusters/titania/apps/beancount/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fava
  namespace: beancount
  labels:
    app: fava
    app.kubernetes.io/instance: fava
    app.kubernetes.io/name: fava
spec:
  selector:
    matchLabels:
      app: fava
  template:
    metadata:
      labels:
        app: fava
        app.kubernetes.io/instance: fava
        app.kubernetes.io/name: fava
    spec:
      containers:
      - image: yegle/fava:v1.30
        imagePullPolicy: IfNotPresent
        name: fava
        command: ["fava"]
        args: ["/bean/journal.beancount", "-p", "5000"]
        ports:
        - containerPort: 5000
          protocol: TCP
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: http
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: data
          mountPath: /bean
      restartPolicy: Always
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: fava-data
