clusters/titania/apps/beancount/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: fava
    app.kubernetes.io/name: fava
    app.kubernetes.io/service: fava
  name: fava
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: http
  selector:
    app: fava
  type: ClusterIP
