clusters/titania/apps/beancount/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: fava
    app.kubernetes.io/name: fava
  annotations:
   nginx.ingress.kubernetes.io/auth-type: basic
   # Use this link to generate your credentials: https://hostingcanada.org/htpasswd-generator/
   nginx.ingress.kubernetes.io/auth-secret: fava-auth-vault
   nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Fava'
  name: fava-ingress
  namespace: beancount
spec:
  tls:
  - hosts:
    - "*.cosmos.cboxlab.com"
    secretName: cosmos-cboxlab-cert
  rules:
  - host: fava.cosmos.cboxlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fava
            port:
              name: http
